# local-jina-reader

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  init-plan.md  pyproject.toml
app/: config.py  main.py
app/api/: deps.py  routes_ops.py  routes_reader.py
app/core/: cache.py  config.py  logging.py  rate_limit.py  security.py
app/models/: schemas.py
app/routers/: health.py  reader.py
app/schemas/: request.py  response.py
app/services/: cache.py  extractor.py  fetcher.py  html_fetcher.py  markdowner.py  ml_engine.py  reader_service.py  renderer.py  streamer.py  url_guard.py
app/utils/: hashing.py  url.py
docker/: api.Dockerfile  entrypoint.sh
reader_clone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api_read.py  test_cache.py  test_health.py  test_reader.py  test_ssrf.py
