[project]
name = "reader-clone"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "httpx>=0.27",
    "playwright>=1.50",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "markdownify>=0.13",
    "readability-lxml>=0.8.1",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "orjson>=3.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10"
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
